# Montreal-Transit-Intelligence

./: .gitignore  FINDINGS.md  README.md  pyproject.toml
docs/: DATABRICKS_SETUP.md
notebooks/: 00_run_full_pipeline.py  00b_bootstrap_check.py  01_ingest.py  02_clean.py  03_aggregate.py  04_weather_analysis.py
scripts/: download_311.py  download_canadiens_schedule.py  download_data.ps1  download_weather.py  run_dashboard.py  run_databricks_pipeline.py  run_local_validation.py  run_pipeline.py  trend_summary.py  upload_to_databricks.ps1
src/mti/: __init__.py  activity_analysis.py  analysis.py  calendar_enrichment.py  canadiens_schedule.py  charts.py  config.py  dashboard_data.py  databricks_setup.py  deep_analysis.py  line_analysis.py  local_pipeline.py  paths.py  quality.py  requests_311.py  rider_experience.py  runner.py  significance.py  spark_pipeline.py  stm_cleaning.py  weather.py
tests/: test_calendar_enrichment.py  test_canadiens_schedule.py  test_dashboard_data.py  test_deep_analysis.py  test_line_analysis.py  test_pipeline.py  test_requests_311.py  test_rider_experience.py  test_significance.py
